[package]
name = "pyo3-anyio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-oneshot = "0.5.0"
once_cell = "1.12.0"

[dependencies.pyo3]
version = "0.16.*"

[dependencies.tokio]
features = ["rt-multi-thread", "sync"]
version = "1.19.2"
