[package]
name = "pyo3-anyio"
description = "PyO3 utility bindings for Anyio's event loop."
version = "0.3.1"
edition = "2021"
authors = ["Faster Speeding <lucina@lmbyrne.dev>"]
categories = ["asynchronous", "development-tools::ffi"]
exclude = [".gitignore", ".gitattributes"]
homepage = "https://github.com/FasterSpeeding/pyo3-anyio"
keywords = ["anyio", "asyncio", "pyo3", "python", "trio"]
license = "BSD-3-Clause"
repository = "https://github.com/FasterSpeeding/pyo3-anyio"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-oneshot = "0.5.*"
once_cell = "1.*"

[dependencies.pyo3]
version = "0.19.*"

[dependencies.tokio]
features = ["rt-multi-thread", "sync"]
version = "1.19.2"
